# edge_detect

./: .gitignore  .ipynb  CMakeLists.txt  count.py  fenge.cc  fenge.py  fenge2.py  fenge_3.py  fenge_FGF.py  hsv.py  line_nihe.cpp  line_nihe.py  lora_rece.py  opencv.py  pdf2xml.py  shot.py  video_cut.py  video_decrease_cut.py
edlines_line_segment_detection/: build.bat  test.cpp
edlines_line_segment_detection/c66/: VXLIB_sobel_3x3_i8u_o16s_o16s_cn.c  VXLIB_sobel_3x3_i8u_o16s_o16s_cn.h  VXLIB_types.h
mlsd/: requirements.txt
old/: .ipynb  bldo.py  hsv_detect.py  line.py  lora_trans.py  npv.py  rgb.py  shot.py  video_cut.py
old/image/: 找到最相似的候选词.c
old/src/: CMakeLists.txt  build.bat  line.cpp  line_video.cpp
so-demo/: Dockerfile  mqtt_pub  mqtt_pub.c  mqtt_sub  mqtt_sub.c
so-demo/make_test/: Makefile  main  main.cpp  mylib.h
so-demo/test/: Dockerfile  example.c  example.h  test.c
src/: hand-writing.c  test.c
